# ml-ops-aws-ecs-fargate

./: .gitignore  README.md
.github/workflows/: push_docker_image_inference_api_to_ecr.yml  push_docker_image_inference_to_ecr.yml  push_docker_image_training_to_ecr.yml  push_docker_images_to_ecr.yml  start_inference.yml  start_training.yml  terraform_apply.yml  terraform_destroy.yml  terraform_plan.yml
ml_ops/infrastructure/: cloudwatch.tf  data.tf  ecr.tf  ecs.tf  iam_roles.tf  main.tf  provider.tf  s3.tf  sagemaker.tf  variables.tf  vpc.tf
ml_ops/scripts/: aws_sagemaker_notebook_auto_stop.py  aws_sagemaker_notebook_on_create.sh  aws_sagemaker_notebook_on_start.sh  aws_sagemaker_notebook_setup_custom_kernel.sh  aws_sagemaker_notebook_setup_idle_auto_stop.sh  pyproject.toml  requirements.txt
ml_ops/src/inference/: Dockerfile  docker_build.sh  pyproject.toml
ml_ops/src/inference/src/: inference.py
ml_ops/src/inference_api/: Dockerfile  pyproject.toml
ml_ops/src/inference_api/src/: inference.py  inference_api.py
ml_ops/src/mlflow/: Dockerfile  docker_build.sh
ml_ops/src/training/: Dockerfile  docker_build.sh  pyproject.toml
ml_ops/src/training/src/: training.py
