[tool.poetry]
name = "inference_api"
version = "0.1.0"
description = "Generate inference from pre-trained machine learning model using flask app"
authors = ["gianni <gbalistreri762@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
s3fs = "^0.4.0"
happy_learning = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"