[tool.poetry]
name = "training"
version = "0.1.0"
description = "Train machine learning model"
authors = ["gianni <gbalistreri762@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
s3fs = "^0.4.0"
happy_learning = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"